# mediarchiver

./: LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: basic-functionality.md  development.md
mediarchiver/: __init__.py  __main__.py  cli.py
mediarchiver/archive/: __init__.py  __main__.py  cli.py  service.py
mediarchiver/common/: console.py  external.py  logging_utils.py  reporting.py  tool.py  workers.py
mediarchiver/rename/: __init__.py  __main__.py  cli.py  metadata.py  options.py  plan.py  rules.py  service.py
scripts/: bootstrap.sh
src/archive/: __init__.py  archive.py  cli.py  service.py
src/common/: console.py  external.py  logging_utils.py  reporting.py  tool.py
src/rename/: __init__.py  cli.py  metadata.py  options.py  rename.py  rules.py  service.py
tests/: test_archive.py  test_external.py  test_rename.py
