[build-system]
requires = ["setuptools>=68", "wheel", "tomli>=2.0.0; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "mediarchiver"
version = "0.1.0"
description = "Media rename and archive CLI powered by Exif metadata"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "tqdm==4.66.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.11.0,<0.12.0",
]

[tool.setuptools]
packages = ["src", "src.archive", "src.common", "src.rename"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
