[build-system]
requires = ["setuptools>=68", "wheel", "tomli>=2.0.0; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "mediarchiver"
version = "0.1.0"
description = "Media rename and archive CLI powered by Exif metadata"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.11.0,<0.12.0",
]

[project.scripts]
mediarchiver = "mediarchiver.cli:main"
mediarchiver-rename = "mediarchiver.rename.cli:main"
mediarchiver-archive = "mediarchiver.archive.cli:main"

[tool.setuptools.packages.find]
include = ["mediarchiver*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
