[build-system]
requires = ["setuptools>=68", "wheel", "tomli>=2.0.0; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "mediarchiver"
version = "0.1.0"
description = "Media rename and archive CLI powered by Exif metadata"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "heminwon" }]
requires-python = ">=3.9"
dependencies = [
  "tqdm==4.67.1",
]

[project.urls]
Homepage = "https://github.com/heminwon/mediarchiver"
Repository = "https://github.com/heminwon/mediarchiver"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.11.0,<0.12.0",
]

[project.scripts]
mediarchiver = "mediarchiver.cli:main"
mediarchiver-rename = "mediarchiver.rename.cli:main"
mediarchiver-archive = "mediarchiver.archive.cli:main"

[tool.setuptools.packages.find]
include = ["mediarchiver*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=mediarchiver --cov-report=term-missing"

[tool.coverage.run]
source = ["mediarchiver"]
omit = ["mediarchiver/__main__.py", "mediarchiver/rename/__main__.py", "mediarchiver/archive/__main__.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = [
  "N802",  # function name should be lowercase — tolerated for existing public API
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
